tests/paczka1/small_fuzzy/25629799.err
Error in line 1: fnLVL1P A167 47,2
Error in line 13: fnLVL1P A951 117,52
Error in line 14: OJK A50 76,3
